# matcha

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_04_2039-7a36fbba1a92_users_create.py  2025_10_05_1437-53fd618dedc0_init_users.py  2025_10_05_1438-651fa443ec28_init_photos.py  2025_10_05_1439-208ce0268822_init_user_profiles.py  2025_10_05_1439-e8947f081edd_init_tags.py  2025_10_05_1441-6d6373198a8c_init_user_tags.py  2025_10_06_1518-9b5d5cc42db3_init_verification_tokens.py  2025_10_07_2000-0e49c21b21ef_added_a_few_default_values.py  2026_02_02_1542-d6fa8876ad9c_initial_migration.py  2026_03_15_1052-f5ab0f66889a_fix_photos_unique.py  2026_04_07_1511-447011dacd74_refresh_token_and_blacklist.py  2026_04_17_0001-a1b2c3d4e5f6_online_status.py  2026_06_12_0001-social_features.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  photos.py  tags.py  user.py  user_profiles.py  user_tags.py
backend/application/: celery_app.py  config.py  database.py  limiter.py  main.py  mypy.ini  redis_client.py
backend/application/api/: router.py
backend/application/clients/: __init__.py  email_client.py
backend/application/models/: __init__.py  blocks.py  connections.py  likes.py  messages.py  notifications.py  photos.py  profile_views.py  refresh_tokens.py  reports.py  tags.py  token_blacklist.py  user_profiles.py  user_tags.py  users.py  verification_tokens.py
backend/application/repository/: __init__.py  photo_repo.py  profile_repo.py  social_repo.py  tag_repo.py  token_repo.py  user_repo.py
backend/application/schema/: __init__.py  auth_schemas.py  photo_schemas.py  (+2 more)
(+79 files in other folders)
