[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "celery>=5.6.2",
    "fastapi>=0.126.0",
    "flower>=2.0.1",
    "jinja2>=3.1.5",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.18",
    "redis>=5.2.1",
    "sib-api-v3-sdk>=7.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
    "zxcvbn>=4.4.28",
]
